# LONewDesign

./: .gitignore  AGENTS.md  ASSISTANT_IMPLEMENTATION_PLAN.md  App.tsx  CHANGELOG.md  COMPOSE-IMPLEMENTATION.md  Canvas-Audit-Report.txt  GEMINI.md  HANDOVER.md  LibreOllama-UI-Kit-Plan.md  MASTER_MIGRATION_PLAN.md  MISTRAL_TESTING_GUIDE.md  PROJECT-TRACKER.md  README.md  Subtask-Sync-Diagnostic-Report.txt  TEST_EVENT_FIX.js  USER-NOTES.md  Unified-UI-Redesign.md  Work-Session-Summary-2025-10-22.md  canvas-tool-selection-audit.txt  design-tokens.md  index.html  main.tsx  package-lock.json  package.json  playwright.config.ts  state-and-sync-guide.md  tailwind.config.ts  test-no-flicker.js  test-sync-fix.js  test-sync.sh  test-ui-flicker.js  tsconfig.json  vite.config.ts
components/: AppShell.tsx  AsanaDesignSystemDemo.tsx  ComposeModal.tsx  EmailOverlay.tsx  InlineReply.tsx  MasterComponentsGuide.tsx  PaneCaretSpec.tsx  Sidebar.tsx  TitleBar.tsx  TriPane.tsx
docs/: CALENDAR_STREAMLINE_SUMMARY.md  README.md
lib/: isTauri.ts  metadata.ts
playwright-report/: index.html
scripts/: smart-dev.sh  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.json.bak
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: main.json
src-tauri/migrations/: 001_create_enhanced_schema.sql  002_add_conflict_tracking.sql  003_create_task_subtasks.sql  004_add_subtask_sync_fields.sql  005_add_saga_orchestration.sql  006_fix_subtasks_schema.sql  20250113000001_create_core_tables.sql
src-tauri/src/: db.rs  main.rs  sync_service.rs  task_metadata.rs
src-tauri/src/commands/: ai_types.rs  ai_utils.rs  deepl.rs  google.rs  mistral.rs  mod.rs  ollama.rs  openai.rs  tasks.rs
src-tauri/src/commands/tasks/: commands.rs  create.rs  delete.rs  helpers.rs  lists.rs  mod.rs  read.rs  subtasks.rs  task_move.rs  types.rs  update.rs
src-tauri/src/sync/: events.rs  google_client.rs  mod.rs  oauth.rs  queue.rs  queue_worker.rs  reconciler.rs  saga.rs  saga_move.rs  service.rs  snapshot.rs  token.rs  types.rs
src-tauri/src/sync/reconciler/: dedupe.rs  mod.rs  poll.rs  prune.rs
(+667 files in other folders)
