[package]
name = "libreollama_desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate"] }
chrono = "0.4"
futures-util = "0.3"
sha2 = "0.10"
uuid = { version = "1.6", features = ["v4"] }
tauri-plugin-deep-link = "^2.4"
tauri-plugin-http = "^2.4"
keyring = "2.3"
url = "2.5"
dotenvy = "0.15"

[dev-dependencies]
proptest = "1.4"

[profile.release]
opt-level = 3
